fix(am): address SonarQube issues in new code