@@ -10,7 +10,6 @@ import java.util.List;
 import java.util.Objects;
 import java.util.Set;
 import java.util.function.Predicate;
-import java.util.stream.Collectors;
 import java.util.stream.Stream;
 import lombok.RequiredArgsConstructor;
 import org.folio.am.domain.dto.ModuleBootstrap;
@@ -43,7 +42,7 @@ public class ModuleBootstrapService {
    */
   @Transactional(readOnly = true)
   public ModuleBootstrap getById(String moduleId) {
-    return getById(moduleId, null);
+    return doGetById(moduleId, null);
   }
 
   /**
@@ -57,6 +56,10 @@ public class ModuleBootstrapService {
    */
   @Transactional(readOnly = true)
   public ModuleBootstrap getById(String moduleId, String applicationId) {
+    return doGetById(moduleId, applicationId);
+  }
+
+  private ModuleBootstrap doGetById(String moduleId, String applicationId) {
     var views = applicationId == null
       ? repository.findAllRequiredByModuleId(moduleId)
       : repository.findAllRequiredByModuleIdAndApplicationIds(
@@ -117,7 +120,7 @@ public class ModuleBootstrapService {
     var descriptor = moduleView.getDescriptor();
     return Stream.concat(toStream(descriptor.getRequires()), toStream(descriptor.getOptional()))
       .map(InterfaceReference::getId)
-      .collect(Collectors.toList());
+      .toList();
   }
 
   private List<ModuleBootstrapDiscovery> toModuleDiscoveries(List<String> requiredInterfaces,
@@ -128,7 +131,7 @@ public class ModuleBootstrapService {
 
     removeNotRequiredInterfaces(requiredInterfaces, moduleViews);
 
-    return moduleViews.stream().map(mapper::convert).collect(Collectors.toList());
+    return moduleViews.stream().map(mapper::convert).toList();
   }
 
   private static void removeNotRequiredInterfaces(List<String> requiredInterfaces, List<ModuleBootstrapView> views) {
